# sea_battle_oop

./: CMakeLists.txt  README.md  ability.h  ability_manager.cpp  ability_manager.h  bombard.cpp  bombard.h  cell.cpp  cell.h  double_damage.cpp  double_damage.h  gamefield.cpp  gamefield.h  main.cpp  scanner.cpp  scanner.h  ship.cpp  ship.h  ship_manager.cpp  ship_manager.h  shippart.cpp  shippart.h
abilities/: ability.h  ability_manager.cpp  ability_manager.h  bombard.cpp  bombard.h  double_damage.cpp  double_damage.h  scanner.cpp  scanner.h
exceptions/: attack_out_of_bound.cpp  attack_out_of_bound.h  invalid_ability_usage.cpp  invalid_ability_usage.h  load_error.cpp  load_error.h  ship_placement_error.cpp  ship_placement_error.h
game/: game.cpp  game.h  game_state.cpp  game_state.h  player.cpp  player.h
gamefield/: cell.cpp  cell.h  gamefield.cpp  gamefield.h
reports/: Borivets_Savelii_lb1.docx  Borivets_Savelii_lb2.docx  Borivets_Savelii_lb3.docx
ships/: ship.cpp  ship.h  ship_manager.cpp  ship_manager.h  shippart.cpp  shippart.h
